[gd_scene load_steps=3 format=3 uid="uid://d9n8p3k5l6qrs"]

[ext_resource type="Script" path="res://scripts/GameOver.gd" id="1"]
[ext_resource type="Theme" path="res://assets/ui_theme.tres" id="2"]

[node name="GameOver" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")
theme = ExtResource("2")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

color = Color(0.3, 0.1, 0.1, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -200.0
offset_right = 150.0
offset_bottom = 200.0

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Game Over!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="DistanceLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Distance: 0m"
horizontal_alignment = 1

[node name="CoinsLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Coins: 0"
horizontal_alignment = 1

[node name="HighScoreLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "High Score: 0m"
horizontal_alignment = 1

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="RetryButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Retry"

[node name="MenuButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Main Menu"

[node name="CloseButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Close"